noinst_HEADERS =
noinst_HEADERS += tsd/assert.h
noinst_HEADERS += tsd/bitwise.h
noinst_HEADERS += tsd/ctype.h
noinst_HEADERS += tsd/dict.h
noinst_HEADERS += tsd/flopen.h
noinst_HEADERS += tsd/hash.h
noinst_HEADERS += tsd/log.h
noinst_HEADERS += tsd/percent.h
noinst_HEADERS += tsd/pidfile.h
noinst_HEADERS += tsd/sbuf.h
noinst_HEADERS += tsd/sha1.h
noinst_HEADERS += tsd/strutil.h
noinst_HEADERS += tsd/task.h
