EXTRA_DIST = \
	test-copy-classes.sh \
	test-file-hole.sh \
	test-inaccessible-dir.sh \
	test-pidfile.sh \
	test-scanner-boundary.sh \
	test-simplecopy.sh \
	testsuite-common.sh

TESTS = \
	test-copy-classes.sh \
	test-file-hole.sh \
	test-inaccessible-dir.sh \
	test-pidfile.sh \
	test-scanner-boundary.sh \
	test-simplecopy.sh
