TESTS = \
	test-copier.sh \
	test-copy-classes.sh \
	test-directory-mode.sh \
	test-file-hole.sh \
	test-inaccessible-dir.sh \
	test-map-corruption.sh \
	test-pidfile.sh \
	test-purgesource.sh \
	test-scanner-boundary.sh \
	test-scan-maxfiles.sh \
	test-simplecopy.sh \
	test-timing.sh

EXTRA_DIST = \
	$(TESTS) \
	testsuite-common.sh
