AM_CPPFLAGS = -I$(top_srcdir)/include
lib_LTLIBRARIES = libtsd.la
libtsd_la_SOURCES =
libtsd_la_SOURCES += tsd_dict.c
libtsd_la_SOURCES += tsd_flopen.c
libtsd_la_SOURCES += tsd_hash.c
libtsd_la_SOURCES += tsd_log.c
libtsd_la_SOURCES += tsd_percent.c
libtsd_la_SOURCES += tsd_pidfile.c
libtsd_la_SOURCES += tsd_readlinev.c
libtsd_la_SOURCES += tsd_readword.c
libtsd_la_SOURCES += tsd_sbuf.c
libtsd_la_SOURCES += tsd_sha1.c
libtsd_la_SOURCES += tsd_straddch.c
libtsd_la_SOURCES += tsd_strlcat.c
libtsd_la_SOURCES += tsd_strlcpy.c
libtsd_la_SOURCES += tsd_task.c
libtsd_la_SOURCES += tsd_task_queue.c
libtsd_la_SOURCES += tsd_task_set.c

dist_man3_MANS =
dist_man3_MANS += tsd_hash.3
dist_man3_MANS += tsd_readlinev.3
dist_man3_MANS += tsd_readword.3
dist_man3_MANS += tsd_sha1.3
dist_man3_MANS += tsd_straddch.3
dist_man3_MANS += tsd_strlcat.3
dist_man3_MANS += tsd_strlcpy.3
dist_man3_MANS += tsd_task.3
dist_man3_MANS += tsd_task_queue.3
dist_man3_MANS += tsd_task_set.3
